--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "startTest": "node demo/test.js",
     "test": "npm run startTest --debug",
+    "startHandlerTest": "node demo/test_handler.js",
+    "handlerTest": "npm run startHandlerTest --debug",
     "startCustomTest": "node demo/test_custom.js",
     "customTest": "npm run startCustomTest --debug"
   },
