--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@h0rn0chse/socket-server",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Extends express.js and ws server with some utilities",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "startTest": "node demo/test.js",
-    "test": "npm run startTest --debug",
+    "test": "npm run startTest --debugpackage",
     "startHandlerTest": "node demo/test_handler.js",
-    "handlerTest": "npm run startHandlerTest --debug",
+    "handlerTest": "npm run startHandlerTest --debugpackage",
     "startCustomTest": "node demo/test_custom.js",
-    "customTest": "npm run startCustomTest --debug"
+    "customTest": "npm run startCustomTest --debugpackage"
   },
   "repository": {
     "type": "git",
